# jsondiff

./: Cargo.toml  readme.md  test2.json  test3.json
.github/workflows/: main.yaml
data/deep/: expected2_3.diff  test1.json  test2.json  test3.json
data/same_key_obj/: expected2_3.diff  test1.json  test2.json  test3.json
data/same_kv_obj/: test1.json  test3.json
data/simple/: expected2_3.diff  test1.json
src/: bin.rs  lib.rs
