[package]
name = "jsondiff"
description = "A tool for outputs semantic difference of json"
readme = "readme.md"
version = "0.1.0"
authors = ["niboshi(mpppk)"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mpppk/jsondiff"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "json"]

[lib]
name = "jsondiff"
path = "src/lib.rs"

[[bin]]
name = "jsondiff"
path = "src/bin.rs"

[dependencies]
structopt = "0.3"
serde_json = "1.0"
similar = "1.3.0"
anyhow = "1.0"
colored = "2"